log
Thu 14 Sep 2023 07:53:10 PM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
57845a9
Thu 14 Sep 2023 07:53:27 PM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  4|7
total_score: 5/70
5198933
Thu 14 Sep 2023 07:59:34 PM UTC: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:88:16: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   88 |         return current;
      |                ^~~~~~~
treemap.c:93:9: error: ‘else’ without a previous ‘if’
   93 |       } else {
      |         ^~~~
treemap.c:94:34: error: expected ‘;’ before ‘}’ token
   94 |           current = current->left
      |                                  ^
      |                                  ;
   95 |       }
      |       ~                           
cc1: all warnings being treated as errors
Compilation failed
44a9989
Thu 14 Sep 2023 08:41:46 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:93:9: error: ‘else’ without a previous ‘if’
   93 |       } else {
      |         ^~~~
treemap.c:94:34: error: expected ‘;’ before ‘}’ token
   94 |           current = current->left
      |                                  ^
      |                                  ;
   95 |       }
      |       ~                           
Compilation failed
011a82c
Thu 14 Sep 2023 08:42:51 PM UTC: 
 treemap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:92:35: error: expected ‘;’ before ‘}’ token
   92 |           current = current->right
      |                                   ^
      |                                   ;
   93 |       }
      |       ~                            
Compilation failed
1d9bc4a
